# monefy-web-app

./: .gitignore  Dockerfile  README.md  aws-ec2-sanic-web-app.yaml  config.py  main.py  pyproject.toml  requirements.txt  run.py  utils.py
.github/workflows/: monefy-app-build.yml
src/common/: app_setup.py  authentication.py  cookies.py  http_codes.py  logger_config.py  utils.py
src/domain/: data_aggregator.py  dropbox_utils.py
src/resources/: monefy_service.py
templates/: auth.html  base.html  home.html  info.html
tests/: conftest.py  test_dropbox_utils.py  test_monefy_dataclass.py  test_monefy_service.py
