[tool.poetry]
name = "monefy-parser"
version = "0.1.0"
description = ""
authors = ["Bohdan Solianyk <bohdan_solianyk@epam.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
sanic = "^21.12.1"
dropbox = "^11.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
sanic-testing = "^0.8.2"
pylint = "^2.13.7"
black = "^22.3.0"
coverage = "^6.3.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
output-format = "colorized"

[tool.pylint.messages_control]
disable = ["unused-argument"]

[tool.pylint.design]
max-attributes = "25"

[tool.pytest.ini_options]
asyncio_mode = "strict"
