[tool.poetry]
name = "monefy-parser"
version = "0.1.0"
description = ""
authors = ["Bohdan Solianyk <bohdan_solianyk@epam.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
sanic = "^22.3.2"
dropbox = "^11.32.0"
sanic-openapi = "^21.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
sanic-testing = "^22.3.0"
pylint = "^2.14.3"
black = "^22.3.0"
coverage = "^6.4.1"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
output-format = "colorized"

[tool.pylint.messages_control]
disable = ["unused-argument", "logging-fstring-interpolation"]

[tool.pylint.design]
max-attributes = "25"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = "True"
check_untyped_defs = "True"
disallow_any_generics = "True"
disallow_incomplete_defs = "True"
disallow_untyped_defs = "True"
disallow_untyped_calls = "True"
no_implicit_optional = "True"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
exclude = ["venv", "tests"]